--- a/src/pages/startpage/Startpage.css
+++ b/src/pages/startpage/Startpage.css
@@ -17,4 +17,11 @@ button {
   button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
   }
-  
+  /* body {
+    margin: 0;
+    display: flex;
+    place-items: center;
+    min-width: 320px;
+    min-height: 100vh;
+    background-image: linear-gradient(to bottom right, red, yellow);
+  } */
